[tool.poetry]
name = "web-homework"
version = "0.1.0"
description = ""
authors = ["Daniels Ivaskevics <wavesaftwaves@gmail.com>"]
readme = "README.md"
packages = [{include = "web_homework"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
